Mini-PHP/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    APOSTROPHE
    ARRAY
    AS
    CALLABLE
    CATCH
    CLONE
    CLOSETAGAL
    COMMENTS
    COMMENTS_C99
    CONST
    CONTINUE
    DECLARE
    DIE
    DOT
    DOT_DOT
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EVAL
    EXIT
    EXTENDS
    FOREACH
    GLOBAL
    GOTO
    HASHTAG
    IMPLEMENTS
    INCLUDE_ONCE
    INSTANCEOF
    INSTEADOF
    INTERFACE
    ISSET
    LIST
    MINUSEQUAL
    NAMESPACE
    PLUSEQUAL
    PRINT
    QUOTES
    REQUIRE_ONCE
    STATIC
    THROW
    TRAIT
    TRY
    USE
    VAR
    XOR
    __HALT_COMPILER

Grammar

Rule 0     S' -> program
Rule 1     program -> OPENTAG declaration_list CLOSETAG
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> fun_call
Rule 7     declaration -> area fun_declaration
Rule 8     declaration -> header_declaration
Rule 9     declaration -> class_declaration
Rule 10    declaration -> echo_stmt
Rule 11    declaration -> unset_stmt
Rule 12    declaration -> selection_stmt
Rule 13    declaration -> iteration_stmt
Rule 14    declaration -> typeclass
Rule 15    echo_stmt -> echo_stmt ECHO STRING SEMI
Rule 16    echo_stmt -> echo_stmt ECHO IDVAR SEMI
Rule 17    echo_stmt -> empty
Rule 18    echo_stmt -> echo_stmt ECHO NUM SEMI
Rule 19    echo_stmt -> echo_stmt ECHO boolean SEMI
Rule 20    echo_stmt -> echo_stmt ECHO fun_declaration SEMI
Rule 21    unset_stmt -> UNSET LPAREN IDVAR RPAREN SEMI
Rule 22    header_declaration -> REQUIRE LPAREN STRING RPAREN SEMI
Rule 23    header_declaration -> INCLUDE LPAREN STRING RPAREN SEMI
Rule 24    class_declaration -> area CLASS ID LBLOCK attribute RBLOCK
Rule 25    class_declaration -> CLASS ID LBLOCK attribute RBLOCK
Rule 26    attribute -> attribute area var_declaration
Rule 27    attribute -> area var_declaration
Rule 28    attribute -> attribute area fun_declaration
Rule 29    attribute -> area fun_declaration
Rule 30    area -> PRIVATE
Rule 31    area -> PUBLIC
Rule 32    area -> PROTECTED
Rule 33    var_declaration -> IDVAR SEMI var_declaration
Rule 34    var_declaration -> IDVAR SEMI
Rule 35    var_declaration -> TIMESTIMES IDVAR SEMI
Rule 36    var_declaration -> TIMESTIMES IDVAR SEMI var_declaration
Rule 37    var_declaration -> IDVAR EQUAL NUM SEMI var_declaration
Rule 38    var_declaration -> IDVAR EQUAL NUM SEMI
Rule 39    var_declaration -> IDVAR EQUAL NULL SEMI var_declaration
Rule 40    var_declaration -> IDVAR EQUAL NULL SEMI
Rule 41    var_declaration -> IDVAR EQUAL boolean SEMI var_declaration
Rule 42    var_declaration -> IDVAR EQUAL boolean SEMI
Rule 43    var_declaration -> IDVAR EQUAL IDVAR SEMI var_declaration
Rule 44    var_declaration -> IDVAR EQUAL IDVAR SEMI
Rule 45    var_declaration -> AMPERSANT IDVAR SEMI var_declaration
Rule 46    var_declaration -> AMPERSANT IDVAR EQUAL IDVAR SEMI selection_stmt
Rule 47    var_declaration -> IDVAR EQUAL AMPERSANT IDVAR SEMI
Rule 48    var_declaration -> IDVAR EQUAL STRING SEMI
Rule 49    var_declaration -> AMPERSANT IDVAR SEMI
Rule 50    var_declaration -> IDVAR EQUAL simple_expression SEMI
Rule 51    fun_declaration -> FUNCTION ID LPAREN params RPAREN compount_stmt
Rule 52    fun_call -> ID LPAREN params RPAREN SEMI
Rule 53    params -> param_list
Rule 54    params -> empty
Rule 55    param_list -> param_list COMMA param_list
Rule 56    param_list -> param
Rule 57    param -> IDVAR
Rule 58    param -> IDVAR LBRACKET RBRACKET
Rule 59    compount_stmt -> LBLOCK echo_stmt local_declarations echo_stmt statement_list echo_stmt RBLOCK
Rule 60    local_declarations -> local_declarations var_declaration
Rule 61    local_declarations -> empty
Rule 62    statement_list -> statement_list statement
Rule 63    statement_list -> empty
Rule 64    statement -> expression_stmt
Rule 65    statement -> compount_stmt
Rule 66    statement -> selection_stmt
Rule 67    statement -> iteration_stmt
Rule 68    statement -> return_stmt
Rule 69    statement -> class_declaration
Rule 70    statement -> echo_stmt
Rule 71    expression_stmt -> expression SEMI
Rule 72    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 73    selection_stmt -> IF LPAREN expression RPAREN statement selection
Rule 74    selection -> ELSE statement
Rule 75    selection -> ELSEIF statement selection
Rule 76    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 77    selection_stmt -> CASE NUM COLON statement BREAK SEMI
Rule 78    selection_stmt -> DEFAULT COLON statement BREAK SEMI
Rule 79    iteration_stmt -> FOR LPAREN var_declaration expression SEMI additive_expression RPAREN statement
Rule 80    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 81    iteration_stmt -> DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
Rule 82    return_stmt -> RETURN SEMI
Rule 83    return_stmt -> RETURN expression SEMI
Rule 84    expression -> var EQUAL expression
Rule 85    expression -> simple_expression
Rule 86    expression -> var EQUAL AMPERSANT IDVAR
Rule 87    expression -> expression AND expression
Rule 88    expression -> expression OR expression
Rule 89    var -> IDVAR
Rule 90    var -> IDVAR LBRACKET expression RBRACKET
Rule 91    simple_expression -> additive_expression relop additive_expression
Rule 92    simple_expression -> additive_expression
Rule 93    relop -> LESS
Rule 94    relop -> LESSEQUAL
Rule 95    relop -> GREATER
Rule 96    relop -> GREATEREQUAL
Rule 97    relop -> DEQUAL
Rule 98    relop -> DISTINT
Rule 99    relop -> ISEQUAL
Rule 100   additive_expression -> additive_expression addop term
Rule 101   additive_expression -> term
Rule 102   additive_expression -> term MINUSMINUS
Rule 103   additive_expression -> term PLUSPLUS
Rule 104   addop -> PLUS
Rule 105   addop -> MINUS
Rule 106   term -> term mulop factor
Rule 107   term -> factor
Rule 108   mulop -> TIMES
Rule 109   mulop -> DIVIDE
Rule 110   factor -> LPAREN expression RPAREN
Rule 111   factor -> var
Rule 112   factor -> NUM
Rule 113   factor -> boolean
Rule 114   factor -> IDVAR LPAREN args RPAREN
Rule 115   args -> args_list
Rule 116   args -> empty
Rule 117   args -> VOID
Rule 118   args_list -> args_list COMMA expression
Rule 119   args_list -> expression
Rule 120   boolean -> TRUE
Rule 121   boolean -> FALSE
Rule 122   typeclass -> ID IDVAR EQUAL NEW constructor SEMI
Rule 123   constructor -> ID LPAREN RPAREN
Rule 124   constructor -> ID LPAREN args RPAREN
Rule 125   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSANT            : 45 46 47 49 86
AND                  : 87
APOSTROPHE           : 
ARRAY                : 
AS                   : 
BREAK                : 77 78
CALLABLE             : 
CASE                 : 77
CATCH                : 
CLASS                : 24 25
CLONE                : 
CLOSETAG             : 1
CLOSETAGAL           : 
COLON                : 77 78
COMMA                : 55 118
COMMENTS             : 
COMMENTS_C99         : 
CONST                : 
CONTINUE             : 
DECLARE              : 
DEFAULT              : 78
DEQUAL               : 97
DIE                  : 
DISTINT              : 98
DIVIDE               : 109
DO                   : 81
DOT                  : 
DOT_DOT              : 
ECHO                 : 15 16 18 19 20
ELSE                 : 74
ELSEIF               : 75
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUAL                : 37 38 39 40 41 42 43 44 46 47 48 50 84 86 122
EVAL                 : 
EXIT                 : 
EXTENDS              : 
FALSE                : 121
FOR                  : 79
FOREACH              : 
FUNCTION             : 51
GLOBAL               : 
GOTO                 : 
GREATER              : 95
GREATEREQUAL         : 96
HASHTAG              : 
ID                   : 24 25 51 52 122 123 124
IDVAR                : 16 21 33 34 35 36 37 38 39 40 41 42 43 43 44 44 45 46 46 47 47 48 49 50 57 58 86 89 90 114 122
IF                   : 72 73
IMPLEMENTS           : 
INCLUDE              : 23
INCLUDE_ONCE         : 
INSTANCEOF           : 
INSTEADOF            : 
INTERFACE            : 
ISEQUAL              : 99
ISSET                : 
LBLOCK               : 24 25 59 81
LBRACKET             : 58 90
LESS                 : 93
LESSEQUAL            : 94
LIST                 : 
LPAREN               : 21 22 23 51 52 72 73 76 79 80 81 110 114 123 124
MINUS                : 105
MINUSEQUAL           : 
MINUSMINUS           : 102
NAMESPACE            : 
NEW                  : 122
NULL                 : 39 40
NUM                  : 18 37 38 77 112
OPENTAG              : 1
OR                   : 88
PLUS                 : 104
PLUSEQUAL            : 
PLUSPLUS             : 103
PRINT                : 
PRIVATE              : 30
PROTECTED            : 32
PUBLIC               : 31
QUOTES               : 
RBLOCK               : 24 25 59 81
RBRACKET             : 58 90
REQUIRE              : 22
REQUIRE_ONCE         : 
RETURN               : 82 83
RPAREN               : 21 22 23 51 52 72 73 76 79 80 81 110 114 123 124
SEMI                 : 15 16 18 19 20 21 22 23 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 52 71 77 78 79 81 82 83 122
STATIC               : 
STRING               : 15 22 23 48
SWITCH               : 76
THROW                : 
TIMES                : 108
TIMESTIMES           : 35 36
TRAIT                : 
TRUE                 : 120
TRY                  : 
UNSET                : 21
USE                  : 
VAR                  : 
VOID                 : 117
WHILE                : 80 81
XOR                  : 
__HALT_COMPILER      : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 79 91 91 92 100
addop                : 100
area                 : 7 24 26 27 28 29
args                 : 114 124
args_list            : 115 118
attribute            : 24 25 26 28
boolean              : 19 41 42 113
class_declaration    : 9 69
compount_stmt        : 51 65
constructor          : 122
declaration          : 2 3
declaration_list     : 1 2
echo_stmt            : 10 15 16 18 19 20 59 59 59 70
empty                : 17 54 61 63 116
expression           : 71 72 73 79 80 81 83 84 87 87 88 88 90 110 118 119
expression_stmt      : 64
factor               : 106 107
fun_call             : 6
fun_declaration      : 5 7 20 28 29
header_declaration   : 8
iteration_stmt       : 13 67
local_declarations   : 59 60
mulop                : 106
param                : 56
param_list           : 53 55 55
params               : 51 52
program              : 0
relop                : 91
return_stmt          : 68
selection            : 73 75
selection_stmt       : 12 46 66
simple_expression    : 50 85
statement            : 62 72 73 74 75 76 77 78 79 80 81
statement_list       : 59 62
term                 : 100 101 102 103 106
typeclass            : 14
unset_stmt           : 11
var                  : 76 84 86 111
var_declaration      : 4 26 27 33 36 37 39 41 43 45 60 79

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPENTAG declaration_list CLOSETAG

    OPENTAG         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPENTAG . declaration_list CLOSETAG
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . fun_call
    (7) declaration -> . area fun_declaration
    (8) declaration -> . header_declaration
    (9) declaration -> . class_declaration
    (10) declaration -> . echo_stmt
    (11) declaration -> . unset_stmt
    (12) declaration -> . selection_stmt
    (13) declaration -> . iteration_stmt
    (14) declaration -> . typeclass
    (33) var_declaration -> . IDVAR SEMI var_declaration
    (34) var_declaration -> . IDVAR SEMI
    (35) var_declaration -> . TIMESTIMES IDVAR SEMI
    (36) var_declaration -> . TIMESTIMES IDVAR SEMI var_declaration
    (37) var_declaration -> . IDVAR EQUAL NUM SEMI var_declaration
    (38) var_declaration -> . IDVAR EQUAL NUM SEMI
    (39) var_declaration -> . IDVAR EQUAL NULL SEMI var_declaration
    (40) var_declaration -> . IDVAR EQUAL NULL SEMI
    (41) var_declaration -> . IDVAR EQUAL boolean SEMI var_declaration
    (42) var_declaration -> . IDVAR EQUAL boolean SEMI
    (43) var_declaration -> . IDVAR EQUAL IDVAR SEMI var_declaration
    (44) var_declaration -> . IDVAR EQUAL IDVAR SEMI
    (45) var_declaration -> . AMPERSANT IDVAR SEMI var_declaration
    (46) var_declaration -> . AMPERSANT IDVAR EQUAL IDVAR SEMI selection_stmt
    (47) var_declaration -> . IDVAR EQUAL AMPERSANT IDVAR SEMI
    (48) var_declaration -> . IDVAR EQUAL STRING SEMI
    (49) var_declaration -> . AMPERSANT IDVAR SEMI
    (50) var_declaration -> . IDVAR EQUAL simple_expression SEMI
    (51) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (52) fun_call -> . ID LPAREN params RPAREN SEMI
    (30) area -> . PRIVATE
    (31) area -> . PUBLIC
    (32) area -> . PROTECTED
    (22) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (23) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (24) class_declaration -> . area CLASS ID LBLOCK attribute RBLOCK
    (25) class_declaration -> . CLASS ID LBLOCK attribute RBLOCK
    (15) echo_stmt -> . echo_stmt ECHO STRING SEMI
    (16) echo_stmt -> . echo_stmt ECHO IDVAR SEMI
    (17) echo_stmt -> . empty
    (18) echo_stmt -> . echo_stmt ECHO NUM SEMI
    (19) echo_stmt -> . echo_stmt ECHO boolean SEMI
    (20) echo_stmt -> . echo_stmt ECHO fun_declaration SEMI
    (21) unset_stmt -> . UNSET LPAREN IDVAR RPAREN SEMI
    (72) selection_stmt -> . IF LPAREN expression RPAREN statement
    (73) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (76) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (77) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (78) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (79) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN statement
    (80) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (81) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (122) typeclass -> . ID IDVAR EQUAL NEW constructor SEMI
    (125) empty -> .

  ! shift/reduce conflict for IDVAR resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for UNSET resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    IDVAR           shift and go to state 16
    TIMESTIMES      shift and go to state 17
    AMPERSANT       shift and go to state 18
    FUNCTION        shift and go to state 19
    ID              shift and go to state 20
    PRIVATE         shift and go to state 21
    PUBLIC          shift and go to state 22
    PROTECTED       shift and go to state 23
    REQUIRE         shift and go to state 24
    INCLUDE         shift and go to state 25
    CLASS           shift and go to state 26
    UNSET           shift and go to state 28
    IF              shift and go to state 29
    SWITCH          shift and go to state 30
    CASE            shift and go to state 31
    DEFAULT         shift and go to state 32
    FOR             shift and go to state 33
    WHILE           shift and go to state 34
    DO              shift and go to state 35
    ECHO            reduce using rule 125 (empty -> .)
    CLOSETAG        reduce using rule 125 (empty -> .)

  ! IDVAR           [ reduce using rule 125 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 125 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 125 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 125 (empty -> .) ]
  ! ID              [ reduce using rule 125 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 125 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 125 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 125 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 125 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 125 (empty -> .) ]
  ! CLASS           [ reduce using rule 125 (empty -> .) ]
  ! UNSET           [ reduce using rule 125 (empty -> .) ]
  ! IF              [ reduce using rule 125 (empty -> .) ]
  ! SWITCH          [ reduce using rule 125 (empty -> .) ]
  ! CASE            [ reduce using rule 125 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 125 (empty -> .) ]
  ! FOR             [ reduce using rule 125 (empty -> .) ]
  ! WHILE           [ reduce using rule 125 (empty -> .) ]
  ! DO              [ reduce using rule 125 (empty -> .) ]

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    fun_call                       shift and go to state 7
    area                           shift and go to state 8
    header_declaration             shift and go to state 9
    class_declaration              shift and go to state 10
    echo_stmt                      shift and go to state 11
    unset_stmt                     shift and go to state 12
    selection_stmt                 shift and go to state 13
    iteration_stmt                 shift and go to state 14
    typeclass                      shift and go to state 15
    empty                          shift and go to state 27

state 3

    (1) program -> OPENTAG declaration_list . CLOSETAG
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . fun_call
    (7) declaration -> . area fun_declaration
    (8) declaration -> . header_declaration
    (9) declaration -> . class_declaration
    (10) declaration -> . echo_stmt
    (11) declaration -> . unset_stmt
    (12) declaration -> . selection_stmt
    (13) declaration -> . iteration_stmt
    (14) declaration -> . typeclass
    (33) var_declaration -> . IDVAR SEMI var_declaration
    (34) var_declaration -> . IDVAR SEMI
    (35) var_declaration -> . TIMESTIMES IDVAR SEMI
    (36) var_declaration -> . TIMESTIMES IDVAR SEMI var_declaration
    (37) var_declaration -> . IDVAR EQUAL NUM SEMI var_declaration
    (38) var_declaration -> . IDVAR EQUAL NUM SEMI
    (39) var_declaration -> . IDVAR EQUAL NULL SEMI var_declaration
    (40) var_declaration -> . IDVAR EQUAL NULL SEMI
    (41) var_declaration -> . IDVAR EQUAL boolean SEMI var_declaration
    (42) var_declaration -> . IDVAR EQUAL boolean SEMI
    (43) var_declaration -> . IDVAR EQUAL IDVAR SEMI var_declaration
    (44) var_declaration -> . IDVAR EQUAL IDVAR SEMI
    (45) var_declaration -> . AMPERSANT IDVAR SEMI var_declaration
    (46) var_declaration -> . AMPERSANT IDVAR EQUAL IDVAR SEMI selection_stmt
    (47) var_declaration -> . IDVAR EQUAL AMPERSANT IDVAR SEMI
    (48) var_declaration -> . IDVAR EQUAL STRING SEMI
    (49) var_declaration -> . AMPERSANT IDVAR SEMI
    (50) var_declaration -> . IDVAR EQUAL simple_expression SEMI
    (51) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (52) fun_call -> . ID LPAREN params RPAREN SEMI
    (30) area -> . PRIVATE
    (31) area -> . PUBLIC
    (32) area -> . PROTECTED
    (22) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (23) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (24) class_declaration -> . area CLASS ID LBLOCK attribute RBLOCK
    (25) class_declaration -> . CLASS ID LBLOCK attribute RBLOCK
    (15) echo_stmt -> . echo_stmt ECHO STRING SEMI
    (16) echo_stmt -> . echo_stmt ECHO IDVAR SEMI
    (17) echo_stmt -> . empty
    (18) echo_stmt -> . echo_stmt ECHO NUM SEMI
    (19) echo_stmt -> . echo_stmt ECHO boolean SEMI
    (20) echo_stmt -> . echo_stmt ECHO fun_declaration SEMI
    (21) unset_stmt -> . UNSET LPAREN IDVAR RPAREN SEMI
    (72) selection_stmt -> . IF LPAREN expression RPAREN statement
    (73) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (76) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (77) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (78) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (79) iteration_stmt -> . FOR LPAREN var_declaration expression SEMI additive_expression RPAREN statement
    (80) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (81) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (122) typeclass -> . ID IDVAR EQUAL NEW constructor SEMI
    (125) empty -> .

  ! shift/reduce conflict for CLOSETAG resolved as shift
  ! shift/reduce conflict for IDVAR resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for UNSET resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    CLOSETAG        shift and go to state 36
    IDVAR           shift and go to state 16
    TIMESTIMES      shift and go to state 17
    AMPERSANT       shift and go to state 18
    FUNCTION        shift and go to state 19
    ID              shift and go to state 20
    PRIVATE         shift and go to state 21
    PUBLIC          shift and go to state 22
    PROTECTED       shift and go to state 23
    REQUIRE         shift and go to state 24
    INCLUDE         shift and go to state 25
    CLASS           shift and go to state 26
    UNSET           shift and go to state 28
    IF              shift and go to state 29
    SWITCH          shift and go to state 30
    CASE            shift and go to state 31
    DEFAULT         shift and go to state 32
    FOR             shift and go to state 33
    WHILE           shift and go to state 34
    DO              shift and go to state 35
    ECHO            reduce using rule 125 (empty -> .)

  ! CLOSETAG        [ reduce using rule 125 (empty -> .) ]
  ! IDVAR           [ reduce using rule 125 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 125 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 125 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 125 (empty -> .) ]
  ! ID              [ reduce using rule 125 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 125 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 125 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 125 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 125 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 125 (empty -> .) ]
  ! CLASS           [ reduce using rule 125 (empty -> .) ]
  ! UNSET           [ reduce using rule 125 (empty -> .) ]
  ! IF              [ reduce using rule 125 (empty -> .) ]
  ! SWITCH          [ reduce using rule 125 (empty -> .) ]
  ! CASE            [ reduce using rule 125 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 125 (empty -> .) ]
  ! FOR             [ reduce using rule 125 (empty -> .) ]
  ! WHILE           [ reduce using rule 125 (empty -> .) ]
  ! DO              [ reduce using rule 125 (empty -> .) ]

    declaration                    shift and go to state 37
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    fun_call                       shift and go to state 7
    area                           shift and go to state 8
    header_declaration             shift and go to state 9
    class_declaration              shift and go to state 10
    echo_stmt                      shift and go to state 11
    unset_stmt                     shift and go to state 12
    selection_stmt                 shift and go to state 13
    iteration_stmt                 shift and go to state 14
    typeclass                      shift and go to state 15
    empty                          shift and go to state 27

state 4

    (3) declaration_list -> declaration .

    CLOSETAG        reduce using rule 3 (declaration_list -> declaration .)
    IDVAR           reduce using rule 3 (declaration_list -> declaration .)
    TIMESTIMES      reduce using rule 3 (declaration_list -> declaration .)
    AMPERSANT       reduce using rule 3 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 3 (declaration_list -> declaration .)
    ID              reduce using rule 3 (declaration_list -> declaration .)
    PRIVATE         reduce using rule 3 (declaration_list -> declaration .)
    PUBLIC          reduce using rule 3 (declaration_list -> declaration .)
    PROTECTED       reduce using rule 3 (declaration_list -> declaration .)
    REQUIRE         reduce using rule 3 (declaration_list -> declaration .)
    INCLUDE         reduce using rule 3 (declaration_list -> declaration .)
    CLASS           reduce using rule 3 (declaration_list -> declaration .)
    UNSET           reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    SWITCH          reduce using rule 3 (declaration_list -> declaration .)
    CASE            reduce using rule 3 (declaration_list -> declaration .)
    DEFAULT         reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    DO              reduce using rule 3 (declaration_list -> declaration .)
    ECHO            reduce using rule 3 (declaration_list -> declaration .)


state 5

    (4) declaration -> var_declaration .

    CLOSETAG        reduce using rule 4 (declaration -> var_declaration .)
    IDVAR           reduce using rule 4 (declaration -> var_declaration .)
    TIMESTIMES      reduce using rule 4 (declaration -> var_declaration .)
    AMPERSANT       reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    ID              reduce using rule 4 (declaration -> var_declaration .)
    PRIVATE         reduce using rule 4 (declaration -> var_declaration .)
    PUBLIC          reduce using rule 4 (declaration -> var_declaration .)
    PROTECTED       reduce using rule 4 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 4 (declaration -> var_declaration .)
    INCLUDE         reduce using rule 4 (declaration -> var_declaration .)
    CLASS           reduce using rule 4 (declaration -> var_declaration .)
    UNSET           reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    DO              reduce using rule 4 (declaration -> var_declaration .)
    ECHO            reduce using rule 4 (declaration -> var_declaration .)


state 6

    (5) declaration -> fun_declaration .

    CLOSETAG        reduce using rule 5 (declaration -> fun_declaration .)
    IDVAR           reduce using rule 5 (declaration -> fun_declaration .)
    TIMESTIMES      reduce using rule 5 (declaration -> fun_declaration .)
    AMPERSANT       reduce using rule 5 (declaration -> fun_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> fun_declaration .)
    ID              reduce using rule 5 (declaration -> fun_declaration .)
    PRIVATE         reduce using rule 5 (declaration -> fun_declaration .)
    PUBLIC          reduce using rule 5 (declaration -> fun_declaration .)
    PROTECTED       reduce using rule 5 (declaration -> fun_declaration .)
    REQUIRE         reduce using rule 5 (declaration -> fun_declaration .)
    INCLUDE         reduce using rule 5 (declaration -> fun_declaration .)
    CLASS           reduce using rule 5 (declaration -> fun_declaration .)
    UNSET           reduce using rule 5 (declaration -> fun_declaration .)
    IF              reduce using rule 5 (declaration -> fun_declaration .)
    SWITCH          reduce using rule 5 (declaration -> fun_declaration .)
    CASE            reduce using rule 5 (declaration -> fun_declaration .)
    DEFAULT         reduce using rule 5 (declaration -> fun_declaration .)
    FOR             reduce using rule 5 (declaration -> fun_declaration .)
    WHILE           reduce using rule 5 (declaration -> fun_declaration .)
    DO              reduce using rule 5 (declaration -> fun_declaration .)
    ECHO            reduce using rule 5 (declaration -> fun_declaration .)


state 7

    (6) declaration -> fun_call .

    CLOSETAG        reduce using rule 6 (declaration -> fun_call .)
    IDVAR           reduce using rule 6 (declaration -> fun_call .)
    TIMESTIMES      reduce using rule 6 (declaration -> fun_call .)
    AMPERSANT       reduce using rule 6 (declaration -> fun_call .)
    FUNCTION        reduce using rule 6 (declaration -> fun_call .)
    ID              reduce using rule 6 (declaration -> fun_call .)
    PRIVATE         reduce using rule 6 (declaration -> fun_call .)
    PUBLIC          reduce using rule 6 (declaration -> fun_call .)
    PROTECTED       reduce using rule 6 (declaration -> fun_call .)
    REQUIRE         reduce using rule 6 (declaration -> fun_call .)
    INCLUDE         reduce using rule 6 (declaration -> fun_call .)
    CLASS           reduce using rule 6 (declaration -> fun_call .)
    UNSET           reduce using rule 6 (declaration -> fun_call .)
    IF              reduce using rule 6 (declaration -> fun_call .)
    SWITCH          reduce using rule 6 (declaration -> fun_call .)
    CASE            reduce using rule 6 (declaration -> fun_call .)
    DEFAULT         reduce using rule 6 (declaration -> fun_call .)
    FOR             reduce using rule 6 (declaration -> fun_call .)
    WHILE           reduce using rule 6 (declaration -> fun_call .)
    DO              reduce using rule 6 (declaration -> fun_call .)
    ECHO            reduce using rule 6 (declaration -> fun_call .)


state 8

    (7) declaration -> area . fun_declaration
    (24) class_declaration -> area . CLASS ID LBLOCK attribute RBLOCK
    (51) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt

    CLASS           shift and go to state 39
    FUNCTION        shift and go to state 19

    fun_declaration                shift and go to state 38

state 9

    (8) declaration -> header_declaration .
